fix(front): #3296 menu alignment to he center
Former-commit-id: 5cd49a928de1d10bad6bd2aa6726e8be2409df46

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -140,7 +140,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   &:focus { color: $fluid-black; } }
 .menu-trans { transform: translateY(-25%) rotateX(35deg);
   transition: transform .5s, opacity .5s; }
-.t-30 { top: 30%; }
+.t-50 { top: 50%; }
 .ty-50 { transform: translateY(-50%); }
 .mt-menu { margin-top: 1.25rem; }
 .f-small { font-size: .8rem; }
@@ -184,6 +184,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .shadowbox-blog { box-shadow: 0px 10px 10px $grayshadow;}
 .hover-card { &:hover {
   box-shadow: 0px 20px 20px $darkshadow; } }
+.mh-100 { max-height: 100%;}
 
 // Tachyons custom responsive classes
 
